# conta-de-gastos-v2

./: .gitignore  CLAUDE.md  Modelo.xlsx  PROJETO.md  README.md  index.html  install.sh  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  vite.config.ts
.claude/: settings.json
.github/workflows/: deploy.yml
legado/: CLAUDE.md  README.md  pyproject.toml
legado/src/gastos/: classificador.py  db.py  main.py  modelos.py  tui.py
legado/src/gastos/parsers/: __init__.py  extrato_itau_txt.py  extrato_nubank.py
legado/tests/fixtures/: extrato_itau.txt  fatura_nubank.csv
legado/tests/unit/: test_classificador.py  test_configuracao.py  test_formatacao.py  test_modelos.py  test_parsers.py  test_sheets_ler.py
legado/todo/: google-sheets-migration.md
public/: Modelo.xlsx
scripts/: aceitacao-deteccoes.ts  aceitacao-parsers.ts  diagnostico-injecao.ts
spike/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
spike/output/: exceljs-report.json  fflate-report.json  sheetjs-report.json  xlsx-populate-report.json
spike/src/: candidate-exceljs.ts  candidate-fflate.ts  candidate-sheetjs.ts  candidate-xlsx-populate.ts  extract-golden.ts
spike/tests/: exceljs.test.ts  extract-golden.test.ts  fflate.test.ts  sheetjs.test.ts  smoke.test.ts  xlsx-populate.test.ts
src/: App.tsx  index.css  main.tsx  test-setup.ts  types.ts
src/__tests__/: App.beforeunload.test.tsx  App.dicionarioUnificado.test.tsx  App.dragdrop.test.tsx  App.mesReferencia.test.tsx  App.painelNaturezas.test.tsx  types.test.ts
src/dominio/: aprendizado.ts  (+8 more)
(+109 files in other folders)
